# pytest_flags

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __main__.py  db.py  models.py
tests/: conftest.py  test_books.py  test_customers.py  test_db_operations.py  test_edge_cases.py  test_for_more_cases.py  test_more_sample_test_cases.py  test_orders.py  test_zzz_last_file.py
